--- a/youtube-thumbnail-generator.html
+++ b/youtube-thumbnail-generator.html
@@ -9,7 +9,7 @@
 <body>
 <div id="page_content">
 <h1>Youtube Thumbnail Generator</h1>
-<p>By <a href="http://www.kompiajaib.com/" title="Kompi Ajaib">ThreeChilix</a></p>
+<p>By <a href="//threecilix.blogspot.com" title="Kompi Ajaib">ThreeChilix</a></p>
   <form>
     <div class="form-group">
         <label for="videoID" class="example">Youtube Video ID example: <span class="ex-text">https://www.youtube.com/watch?v=</span><b>xxxxxxxxxxx</b></label>
